@@ -7,14 +7,12 @@
 package org.gridsuite.modification.modifications;
 
 import com.fasterxml.jackson.core.type.TypeReference;
-import com.powsybl.iidm.network.Network;
-import com.powsybl.iidm.network.SwitchKind;
+import com.powsybl.iidm.network.*;
+import com.powsybl.iidm.network.extensions.IdentifiableShortCircuit;
 import org.gridsuite.modification.dto.*;
 import org.gridsuite.modification.utils.NetworkCreation;
 
-import java.util.Arrays;
-import java.util.Map;
-import java.util.UUID;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -32,6 +30,35 @@ class LineAttachToNewVoltageLevelTest extends AbstractNetworkModificationTest {
                 .build();
     }
 
+    private static VoltageLevelCreationInfos getAttachmentPoint() {
+        return VoltageLevelCreationInfos.builder()
+                .equipmentId("AttPointId")
+                .stashed(false)
+                .nominalV(0)
+                .substationCreation(SubstationCreationInfos.builder().stashed(false)
+                        .equipmentId("attachmentPointSubstation")
+                        .equipmentName("attachmentPointSubstationName")
+                        .country(Country.FR)
+                        .properties(List.of(FreePropertyInfos.builder()
+                                .added(true)
+                                .name("substationProp")
+                                .value("valueSubstation")
+                                .build()))
+                        .build())
+                .lowVoltageLimit(50.0)
+                .highVoltageLimit(100.0)
+                .ipMin(5.0)
+                .ipMax(20.0)
+                .busbarCount(1)
+                .sectionCount(1)
+                .properties(List.of(FreePropertyInfos.builder()
+                        .added(true)
+                        .name("voltageLevelProp")
+                        .value("valueVoltageLevel")
+                        .build()))
+                .build();
+    }
+
     private static VoltageLevelCreationInfos getNewVoltageLevel() {
         return VoltageLevelCreationInfos.builder()
                 .stashed(false)
@@ -45,8 +72,13 @@ class LineAttachToNewVoltageLevelTest extends AbstractNetworkModificationTest {
                 .ipMax(10.0)
                 .busbarCount(2)
                 .sectionCount(2)
-                .switchKinds(Arrays.asList(SwitchKind.BREAKER))
-                .couplingDevices(Arrays.asList(CouplingDeviceInfos.builder().busbarSectionId1("1A").busbarSectionId2("1B").build()))
+                .switchKinds(List.of(SwitchKind.BREAKER))
+                .couplingDevices(Collections.singletonList(CouplingDeviceInfos.builder().busbarSectionId1("1A").busbarSectionId2("1B").build()))
+                .properties(List.of(FreePropertyInfos.builder()
+                        .added(true)
+                        .name("newVoltageLevelProp")
+                        .value("newVoltageLevelValue")
+                        .build()))
                 .build();
     }
 
@@ -63,6 +95,7 @@ class LineAttachToNewVoltageLevelTest extends AbstractNetworkModificationTest {
                 .percent(20.0)
                 .attachmentPointId("AttPointId")
                 .attachmentPointName("attPointName")
+                .attachmentPointDetailInformation(getAttachmentPoint())
                 .mayNewVoltageLevelInfos(getNewVoltageLevel())  // create another new VL
                 .existingVoltageLevelId(null)
                 .bbsOrBusId("1.A")
@@ -81,9 +114,37 @@ class LineAttachToNewVoltageLevelTest extends AbstractNetworkModificationTest {
         assertNotNull(getNetwork().getLine("nl1"));
         assertNotNull(getNetwork().getLine("nl2"));
         assertNotNull(getNetwork().getVoltageLevel("AttPointId"));
-        assertNotNull(getNetwork().getVoltageLevel("newVoltageLevel"));
+
+        VoltageLevel newVoltageLevel = getNetwork().getVoltageLevel("newVoltageLevel");
+        assertNotNull(newVoltageLevel);
+        assertEquals("newVoltageLevelValue", newVoltageLevel.getProperty("newVoltageLevelProp"));
+
         // replaced line is gone
         assertNull(getNetwork().getLine("line3"));
+
+        // attachment point substation
+        Substation attachmentPointSubstation = getNetwork().getSubstation("attachmentPointSubstation");
+        assertNotNull(attachmentPointSubstation);
+        assertTrue(attachmentPointSubstation.getOptionalName().isPresent());
+        assertEquals("attachmentPointSubstationName", attachmentPointSubstation.getOptionalName().get());
+        assertEquals("valueSubstation", attachmentPointSubstation.getProperty("substationProp"));
+        assertTrue(attachmentPointSubstation.getCountry().isPresent());
+        assertEquals(Country.FR, attachmentPointSubstation.getCountry().get());
+        assertTrue(attachmentPointSubstation.isFictitious());
+
+        // attachment point voltage level
+        VoltageLevel attachmentPointVoltageLevel = getNetwork().getVoltageLevel("AttPointId");
+        assertNotNull(attachmentPointVoltageLevel);
+        assertEquals("valueVoltageLevel", attachmentPointVoltageLevel.getProperty("voltageLevelProp"));
+        assertEquals(380.0, attachmentPointVoltageLevel.getNominalV(), 0.001);
+        assertEquals(50.0, attachmentPointVoltageLevel.getLowVoltageLimit(), 0.001);
+        assertEquals(100.0, attachmentPointVoltageLevel.getHighVoltageLimit(), 0.001);
+        assertTrue(attachmentPointVoltageLevel.isFictitious());
+
+        IdentifiableShortCircuit<VoltageLevel> identifiableShortCircuit = attachmentPointVoltageLevel.getExtension(IdentifiableShortCircuit.class);
+        assertNotNull(identifiableShortCircuit);
+        assertEquals(5.0, identifiableShortCircuit.getIpMin(), 0.001);
+        assertEquals(20.0, identifiableShortCircuit.getIpMax(), 0.001);
     }
 
     @Override
